Alterar funções de funcionários.
