# storage/api-docs/api-docs.json
@@ -290,13 +290,13 @@
                 ]
             }
         },
-        "/api/employees": {
+        "/api/employees/{parking_id}": {
             "get": {
                 "tags": [
                     "Funcionários"
                 ],
                 "summary": "Buscar todas os funcionários",
-                "operationId": "e7707cd772b42c62a4f8dcec4eac24dd",
+                "operationId": "b03549d9deee7e924df8f9c53522dc17",
                 "parameters": [
                     {
                         "name": "parking_id",
@@ -328,7 +328,9 @@
                         "Autenticação": []
                     }
                 ]
-            },
+            }
+        },
+        "/api/employees": {
             "post": {
                 "tags": [
                     "Funcionários"
